--- a/package.json
+++ b/package.json
@@ -7,20 +7,27 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:elements": "ng build --prod --output-hashing none && node build-script.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.1.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
+    "@angular/elements": "^6.0.3",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/material": "^6.1.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@webcomponents/custom-elements": "^1.1.1",
+    "concat": "^1.0.3",
     "core-js": "^2.5.4",
+    "fs-extra": "^6.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
